Fixed some comment

--- a/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
+++ b/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
@@ -1,6 +1,6 @@
 [zzzWeaponSkinReplacer.X2DownloadableContentInfo_WeaponSkinReplacer]
 
-;* Mod support : WSR Shotgun Animations
+;* Mod support : Operation Parallels - The Doom Slayer Mod and [WOTC] Operation Parallels : Laser and Coil expansion
 
 +ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=DoomSlayerShotgun_MG, \\
 	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
@@ -26,7 +26,7 @@
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
 
-;* Mod support : Rogue Xcom Faction
+;* Mod support : Raider Faction: Rogue XCOM Operatives
 
 +ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=XComShotgun_M1, \\
 	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
