--- a/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
+++ b/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
@@ -112,7 +112,7 @@
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
 
-;* Mod support : [WOTC] Chimera Squad Weapons - Ghost Templates
+;* Mod support : [WOTC] Chimera Squad Weapon Pack
 
 +ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=ChimeraShotgun, \\
 	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
