Added support for Total Advent Weaponry - WOTC

--- a/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
+++ b/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
@@ -1,6 +1,12 @@
 [zzzWeaponSkinReplacer.X2DownloadableContentInfo_WeaponSkinReplacer]
 
 ;* Mod support : Operation Parallels - The Doom Slayer Mod and [WOTC] Operation Parallels : Laser and Coil expansion
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=DoomSlayerShotgun_CV, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
 +ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=DoomSlayerShotgun_MG, \\
 	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
 	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
@@ -171,6 +177,23 @@
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
 +ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=TC_WOTC_MWR_W1200_T3, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
+;* Total Advent Weaponry - WOTC
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=Shotgun_Advent_CV, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=Shotgun_Advent_MG, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=Shotgun_Advent_BM, \\
 	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
 	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
