Added mod support for : Clean TLE Weapons With Tiered Upgrades

--- a/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
+++ b/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
@@ -182,7 +182,7 @@
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
 
-;* Total Advent Weaponry - WOTC
+;* Support mod : Total Advent Weaponry - WOTC
 +ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=Shotgun_Advent_CV, \\
 	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
 	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
@@ -194,6 +194,25 @@
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
 +ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=Shotgun_Advent_BM, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
+;* Support mod : Clean TLE Weapons With Tiered Upgrades
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=TLP_F_Shotgun_CV, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=TLP_F_Shotgun_MG, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=TLP_F_Shotgun_BM, \\
 	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
 	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
