Added support for (WOTC) Halo UNSC Classic Weapons

--- a/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
+++ b/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
@@ -13,7 +13,7 @@
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
 
-+ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=DoomSlayerShotgun_LS, \\
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=DS_Shotgun_LS, \\
 	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
 	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Standard", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
@@ -213,6 +213,25 @@
 	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
 
 +ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=TLP_F_Shotgun_BM, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
+;* Support mod : (WOTC) Halo UNSC Classic Weapons
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=WP_REACHSHOTGUN, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=WP_REACHSHOTGUN_MG, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=WP_REACHSHOTGUN_BM, \\
 	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
 	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
