Added support for [WOTC] TLP Tier Replacer with Visual Upgrades

--- a/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
+++ b/WSR_NewShotgunAnimation_Addon/Config/XComWeaponSkinReplacer.ini
@@ -236,3 +236,23 @@
 	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
 	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
+;* Mod support : [WOTC] TLP Tier Replacer with Visual Upgrades
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=TLP_V_Shotgun_CV, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=TLP_V_2_Shotgun_MG, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
+
+
++ANIMSET_REPLACEMENT=(ACCEPTOR_TEMPLATE=TLP_V_3_Shotgun_BM, \\
+	SOLDIER_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping", \\
+	SOLDIER_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[0]="NewShotgunAnim.AS_Shotgun_OnlyNewPumping_F", \\
+	SOLDIER_FEMALE_ANIMSET_PATHS[1]="NewShotgunAnim.AS_Shotgun_Reload_Bullpup_F")
